--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ input:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url(./assets/play-blue.svg); /* Вторая картинка */
+	background-image: url(./src/assets/play-blue.svg); /* Вторая картинка */
 	background-size: contain; /* Изображение полностью помещается в область */
 	background-position: center; /* Центрируем изображение */
 	background-repeat: no-repeat; /* Запрещаем повторение */
@@ -327,7 +327,7 @@ input:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url(./assets/telegram-blue.svg); /* Вторая картинка */
+	background-image: url(./src/assets/telegram-blue.svg); /* Вторая картинка */
 	background-size: cover;
 	opacity: 0; /* Скрыта по умолчанию */
 	transition: opacity 0.3s ease; /* Плавное появление */
@@ -364,7 +364,7 @@ input:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url(./assets/phone-blue.svg); /* Вторая картинка */
+	background-image: url(./src/assets/phone-blue.svg); /* Вторая картинка */
 	background-size: cover;
 	opacity: 0; /* Скрыта по умолчанию */
 	transition: opacity 0.3s ease; /* Плавное появление */
@@ -401,7 +401,7 @@ input:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url(./assets/whatsApp-blue.svg); /* Вторая картинка */
+	background-image: url(./src/assets/whatsApp-blue.svg); /* Вторая картинка */
 	background-size: cover;
 	opacity: 0; /* Скрыта по умолчанию */
 	transition: opacity 0.3s ease; /* Плавное появление */
